...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="cC5-uz-LMg">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="3SU-Xh-hRc" userLabel="Login" customClass="LoginViewController" customModule="OnTheMap" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="gBx-84-aKz"/>
                        <viewControllerLayoutGuide type="bottom" id="lrP-JK-bzh"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Kjo-9h-yRk">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="qyh-ch-WrS"/>
                                    </mask>
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jnf-Cf-esy">
                                <rect key="frame" x="175" y="235" width="250" height="44"/>
                                <color key="backgroundColor" red="1" green="0.86647050218169852" blue="0.64753390823884249" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="dRg-4h-e2g"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="nbp-tk-i99"/>
                                </constraints>
...
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
                                <connections>
                                    <outlet property="delegate" destination="3SU-Xh-hRc" id="JUA-pF-kiD"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fAr-h9-b5I">
                                <rect key="frame" x="175" y="287" width="250" height="44"/>
                                <color key="backgroundColor" red="1" green="0.86647050219999999" blue="0.64753390820000001" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="RFy-RM-eW0"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="VZ3-ek-Xxh"/>
                                </constraints>
...
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="34"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" tag="1" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uG9-pA-Z9v">
                                <rect key="frame" x="257" y="320" width="87" height="30"/>
                                <color key="backgroundColor" red="0.81244081439393934" green="0.81244081439393934" blue="0.81244081439393934" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Find On Map"/>
                                <connections>
                                    <action selector="search:" destination="yoE-1K-dy6" eventType="touchUpInside" id="76x-BR-YiM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="deF-ln-Rdd">
                                <rect key="frame" x="532" y="20" width="48" height="30"/>
...
                                    <outlet property="delegate" destination="IU9-Qh-ajK" id="Dl5-61-yqa"/>
                                </connections>
                            </mapView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8eW-X3-sZq">
                                <rect key="frame" x="276" y="493" width="49" height="30"/>
                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="submitButtonTapped:" destination="IU9-Qh-ajK" eventType="touchUpInside" id="WKl-5S-M3d"/>
                                </connections>
                            </button>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ULM-BB-gWk">
                                <rect key="frame" x="290" y="346" width="20" height="20"/>
...
                                                    <rect key="frame" x="62" y="25.5" width="40.5" height="13.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="MapMarker" id="b2s-Xh-YeB">
                                                    <rect key="frame" x="15" y="5" width="32" height="32"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                </imageView>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
...
