...

class MainviewController: UITabBarController {
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.navigationItem.leftBarButtonItem = UIBarButtonItem (
            title: "Log Out",
            style: UIBarButtonItemStyle.Plain,
            target: self,
            action: "logOut")
        
        let locationButton = UIBarButtonItem(image: UIImage(named: "MapMarker"), style: UIBarButtonItemStyle.Plain, target: self, action: "checkin")
        
...
